# Telegram-ProJect

./: .gitignore  README.md  check.ps1  main.py  mypy.ini  pyproject.toml  run.ps1
db/: database.db
src/: config.py  main.py
src/bot/handlers/: __init__.py  calendar.py  calendar_callback.py  main_keyboard.py  main_keyboard_callback.py  start.py
src/bot/keyboards/: calendar_kb.py  main_kd.py  main_keyboard.py
src/database/: __init__.py  db_manager.py
src/database/models/: user.py
src/database/repositories/: base_repository.py  user_repository.py
src/enums/: __init__.py  base_str_enum.py  calendar_actions.py  calendar_icons.py  main_menu_icons.py
src/models/: __init__.py  calendar_button_model.py
src/services/: calendar_generator.py
tests/database_tests/: conftest.py  db_manager_test.py
tests/database_tests/models_tests/: user_test.py
tests/database_tests/repositories_tests/: user_repository_test.py
tests/keyboard_test/: calendar_kb_test.py  conftest.py  main_kb_test.py
tests/service_tests/: calendar_generator_test.py
