[project]
name = "telegram-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.ruff]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = []

line-length = 88

[tool.ruff.lint.isort]
force-single-line = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

addopts = "--cov=src"
